[package]
authors = ["Joe Bowman <joe@chorus.one>", "Parth Desai <parth@chorus.one>"]
edition = "2018"
name = "quantum-tunnel"
version = "0.1.0"

[[bin]]
name = "quantum-tunnel"
test = false
bench = false
path = "src/bin/quantum_tunnel/main.rs"


[dependencies]
futures = "0.3.5"
futures_codec = "0.4.1"
gumdrop = "0.7"
simple-error = "0.1.9"
sp-core = "2.0.0-rc.4"
sp-finality-grandpa = "2.0.0-rc.4"
sp-runtime = "2.0.0-rc.4"
parity-scale-codec = "1.3.1"
thiserror = "1"
toml = "0.5.6"
url = "1.7.2"
log = "0.4.8"
serde_json = "1.0.56"
hyper = "0.13"
bytes = "0.5.5"
tiny-bip39 = "0.7.3"
tiny-hderive = "0.2.1"
crossbeam-channel = "0.4.2"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
hex = "0.4.2"
parse_duration = "2.1.0"
regex = "1"
signature = "1.1.0"
cast = "0.1.0"
k256 = "0.3.0"
base64-serde = "0.5.1"
base64 = "0.12.3"
substrate-subxt = "0.10.1"
substrate-subxt-proc-macro = "0.9.0"
rand = "0.7.3"
sp-keyring = "2.0.0-rc4"
ctrlc = "3.1.6"

[dependencies.signatory-secp256k1]
version = "0.20.1"
git = "https://github.com/ChorusOne/signatory"
tag = "v0.20.1"
default_features = false

[dependencies.signatory]
version = "0.20.0"
git = "https://github.com/ChorusOne/signatory"
tag = "v0.20.1"
default_features = false
features = ["ecdsa"]

[dependencies.abscissa_core]
version = "0.5.2"

[dependencies.tokio-tungstenite]
version = "0.10.1"

[dependencies.serde]
features = ["serde_derive"]
version = "1"

[dependencies.tendermint]
default-features = false
git = "https://github.com/ChorusOne/tendermint-rs.git"
branch = "master"
version = "0.14.0"

[dependencies.tendermint-rpc]
default-features = false
features = ["client"]
git = "https://github.com/ChorusOne/tendermint-rs.git"
branch = "master"
version = "0.14.0"

[dependencies.tendermint_light_client]
default-features = false
git = "https://github.com/ChorusOne/tendermint_light_client.git"
branch = "master"
version = "0.3.0"

[dependencies.tokio]
default_features = false
features = ["rt-core"]
version = "0.2"

[dev-dependencies]
once_cell = "1.2"

[dev-dependencies.abscissa_core]
features = ["testing"]
version = "0.5.2"
