[package]
authors = ["Joe Bowman <joe@chorus.one>", "Parth Desai <parth@chorus.one>"]
edition = "2018"
name = "quantum-tunnel"
version = "0.1.0"

[[bin]]
name = "quantum-tunnel"
test = false
bench = false
path = "src/bin/quantum_tunnel/main.rs"

[dependencies]
cfg-if = "0.1"
futures = "0.3.5"
futures_codec = "0.4.1"
gumdrop = "0.7"
simple-error = "0.1.9"
thiserror = "1"
url = "1.7.2"
log = "0.4.8"
serde_json = "1.0"
hyper = "0.14"
bytes = "1"
tiny-bip39 = "0.7.3"
tiny-hderive = "0.2.1"
crossbeam-channel = "0.4.2"
hex = "0.4.2"
parse_duration = "2.1.0"
regex = "1"
signature = "1.1.0"
cast = "0.1.0"
base64-serde = "0.5.1"
base64 = "0.12.3"
rand = "0.7.3"
abscissa_core = "0.5.2"
tokio-tungstenite = "0.14.0"
k256 = { version = "0.7.2", features = ["ecdsa", "sha256"] }
tokio = { version = "1.2", features = ["rt-multi-thread", "time"], default-features = false }
serde = { version = "1", features = ["serde_derive"] }
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
prost = "0.7"
prost-types = "0.7"
tonic = "0.4.0"

# Cosmos deps
tendermint-rpc = { version = "0.18", features = ["websocket-client"], default-features = false }
tendermint = { version = "0.18", default-features = false }

# Substrate deps
sp-core = { version = "2.0.1", optional = true }
sp-finality-grandpa = { version = "2.0.1", optional = true }
sp-runtime = { version = "2.0.1", optional = true }
sp-keyring = { version = "2.0.1", optional = true }
parity-scale-codec = { version = "1.3.1", optional = true }
substrate-subxt = { version = "0.13.0", optional = true }
substrate-subxt-proc-macro = { version = "0.13.0", optional = true }

# Celo deps
num = { version = "0.3.1", optional = true }
celo_light_client = { git = "https://github.com/ChorusOne/celo-light-client.git", branch = "main", features = ["wasm-contract"], optional = true , default-features = false}

[build-dependencies]
tonic-build = "0.4.0"

[features]
celo = [
    "celo_light_client",
    "num"
]

substrate = [
    "sp-core",
    "sp-finality-grandpa",
    "sp-runtime",
    "sp-keyring",
    "parity-scale-codec",
    "substrate-subxt",
    "substrate-subxt-proc-macro",
]

[dependencies.tendermint_light_client]
default-features = false
git = "https://github.com/ChorusOne/tendermint_light_client.git"
branch = "master"
version = "0.4.0"

[dev-dependencies]
once_cell = "1.2"

[dev-dependencies.abscissa_core]
features = ["testing"]
version = "0.5.2"
