[package]
authors = ["Joe Bowman <joe@chorus.one>", "Parth Desai <parth@chorus.one>"]
edition = "2018"
name = "quantum-tunnel"
version = "0.1.0"

[[bin]]
name = "quantum-tunnel"
test = false
bench = false
path = "src/bin/quantum_tunnel/main.rs"

[dependencies]
cfg-if = "0.1"
futures = "0.3.5"
futures_codec = "0.4.1"
gumdrop = "0.7"
simple-error = "0.1.9"
thiserror = "1"
url = "1.7.2"
log = "0.4.8"
serde_json = "1.0"
hyper = "0.14.16"
bytes = "1"
crossbeam-channel = "0.4.2"
hex = "0.4.2"
parse_duration = "2.1.0"
regex = "1"
signature = "1.1.0"
cast = "0.1.0"
#base64-serde = "0.5.1"
#base64 = "0.12.3"
rand = "0.7.3"
abscissa_core = "0.5.2"
tokio-tungstenite = "0.14.0"
tokio = { version = "1.2", features = ["rt-multi-thread", "time"], default-features = false }
serde = { version = "1", features = ["serde_derive"] }
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
prost = "0.9"
prost-types = "0.9"
tonic = "0.6"
bitcoin = {version = "0.27"}
k256 = {version = "0.10"}
bip39 = {version = "1.0"}
ethereum-types = {version = "0.11", default-features = false, features = ["rlp"]}
rlp = {version = "0.5"}
ibc-proto = {git = "https://github.com/ChorusOne/ibc-rs", branch = "giulio/proto_wasm_client"}

# Cosmos deps
tendermint-rpc = { version = "0.23", features = ["websocket-client"], default-features = false }
tendermint = { version = "0.23", default-features = false, features = ["secp256k1"] }

# Substrate deps
sp-core = { version = "2.0.1", optional = true }
sp-finality-grandpa = { version = "2.0.1", optional = true }
sp-runtime = { version = "2.0.1", optional = true }
sp-keyring = { version = "2.0.1", optional = true }
parity-scale-codec = { version = "1.3.1", optional = true }
substrate-subxt = { version = "0.13.0", optional = true }
substrate-subxt-proc-macro = { version = "0.13.0", optional = true }

# Celo deps
num = { version = "0.3.1", optional = true }
celo-types = { git = "https://github.com/ChorusOne/celo-light-client.git", branch = "giulio/improvs", features = ["serialize"], optional = true}

[build-dependencies]
tonic-build = "0.4.0"

[features]
default = ["celo"]
celo = [
    "celo-types",
    "num"
]

substrate = [
    "sp-core",
    "sp-finality-grandpa",
    "sp-runtime",
    "sp-keyring",
    "parity-scale-codec",
    "substrate-subxt",
    "substrate-subxt-proc-macro",
]


[dev-dependencies]
once_cell = "1.2"

[dev-dependencies.abscissa_core]
features = ["testing"]
version = "0.5.2"
